--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -29,7 +29,8 @@ jobs:
           
           # 3. Create Timestamp
           TIMESTAMP=$(date +'%b %d, %Y - %I:%M %p')
-          sed -i "s/ID=\"update-time\">.*<\/span>/ID=\"update-time\">$TIMESTAMP<\/span>/g" index.html
+          sed -i "s/id=\"update-time\">.*<\/span>/id=\"update-time\">$TIMESTAMP<\/span>/g" index.html
+
           
           # 4. Update Cache Buster (changes ?v=1 to ?v=[current seconds])
           CACHE_ID=$(date +%s)
