--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -27,12 +27,13 @@ jobs:
           convert "uploads/$NEW_FILE" -quality 80 daily.jpg
           rm "uploads/$NEW_FILE"
           
-          # 3. Create Timestamp
+          # 3. Robust Timestamp & Cache Buster
+          # This uses a different separator (@) to avoid issues with slashes
           TIMESTAMP=$(date +'%b %d, %Y - %I:%M %p')
-          # 3. Create Timestamp
-          TIMESTAMP=$(date +'%b %d, %Y - %I:%M %p')
-          sed -i "s/id=[\"']update-time[\"']>.*<\/span>/id=\"update-time\">$TIMESTAMP<\/span>/g" index.html
-
+          CACHE_ID=$(date +%s)
+          
+          sed -i "s@id=\"update-time\">.*</span>@id=\"update-time\">$TIMESTAMP</span>@g" index.html
+          sed -i "s@daily.jpg?v=[0-9]*@daily.jpg?v=$CACHE_ID@g" index.html
 
           
           # 4. Update Cache Buster (changes ?v=1 to ?v=[current seconds])
